# OGDD

./: CHANGELOG.md  FOUNDING_PRINCIPLES.md  LICENSE  README.md  pyproject.toml
src/ogdd/: __init__.py  mesh.py
src/ogdd/algorithms/: __init__.py  alignment.py  confidence.py  occlusal.py  pca.py  plane_fitting.py  region.py
src/ogdd/core/: result.py
src/ogdd/geometry/: __init__.py  bounding.py  plane.py  transform.py  vectors.py
src/ogdd/io/: __init__.py  mesh_loader.py  stl.py
tests/: test_alignment.py  test_bounding.py  test_confidence.py  test_mesh.py  test_occlusal.py  test_occlusal_v02.py  test_occlusal_v03.py  test_pca.py  test_plane.py  test_plane_fitting.py  test_region.py  test_result.py  test_stl.py  test_transform.py  test_vectors.py
