[build-system]
requires = [
    "setuptools>=68",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "ogdd"
version = "0.1.0a1"
description = "Open Geometry for Digital Dentistry - Computational geometry tools for digital dentistry."
readme = "README.md"
requires-python = ">=3.11"

license = {text = "MIT"}

authors = [
    {name = "Armando Prado"}
]

dependencies = [
    "numpy>=1.26"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License"
]


[project.urls]
Homepage = "https://github.com/armandoprado73-coder/OGDD"
Repository = "https://github.com/armandoprado73-coder/OGDD"


[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = [
    "tests"
]
